# urotheliome-dash

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh  wsgi.py
.github/: dependabot.yml
DashApp/: README.md  app.py  requirements.txt  wsgi.py
DashApp/assets/: style.css
DashApp/callbacks/: gene_callbacks.py
DashApp/components/: dropdowns.py  plots.py  radio_buttons.py
DashApp/data/: fetch_data.py  fetch_names.py
DashApp/db/: connection.py
DashApp/layouts/: accessibility_layout.py  footer.py  gene_dashboard_layout.py  genome_browser_layout.py  home_layout.py  layout_manager.py  navigation.py
db-generation/: build_database.sh  data_upload.py  import_data.ipynb  schema.sql  test-db.db
